-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.18.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/ad018f4c-3c96-4687-9af8-a78c61b3470b
test_56eaa failed with the following error:
== sanity test 56eaa: test lfs find -printf added functions ========================================================== 23:31:05 (1774308665) comparing 32235 elements starting with: lfs: 144115188193296385 root root drwxrwxrwx /mnt/lustre find: 144115188193296385 root root drwxrwxrwx /mnt/lustre sanity test_56eaa: @@@@@@ FAIL: expected 'sanityusr' but got 'root' from file /mnt/lustre/d33a.sanity/f33a.sanity
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/122846 - 5.14.0-503.40.1.el9_5.aarch64+64k
servers: https://build.whamcloud.com/job/lustre-reviews/122846 - 4.18.0-553.111.1.el8_lustre.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_56eaa - expected 'sanityusr' but got 'root' from file /mnt/lustre/d33a.sanity/f33a.sanity