LU-20040 llapi: use getpwuid_r/getgrgid_r in find -printf %u/%g

The printf_format_directive() %u and %g handlers cache the resolved
username/group per worker thread (LU-19557 made the cache __thread), but
still resolve names with getpwuid()/getgrgid(). Those are non-reentrant:
each returns a pointer into a shared static buffer that a concurrent
parallel-find (pfind) worker's lookup can overwrite between the lookup
and the strncpy into the thread-local cache. A file owned by e.g.
'sanityusr' then caches the name of whatever uid another thread resolved
concurrently (often 'root'), producing intermittent sanity test_56Eaa
failures: "expected 'sanityusr' but got 'root'".

This is the residual of LU-19557, which fixed the cache race (static ->
__thread) and localtime -> localtime_r for the same reason, but left the
getpwuid()/getgrgid() calls non-reentrant. Use the reentrant
getpwuid_r()/getgrgid_r() with caller-provided buffers.

This is a test of automated regression finding and fixing process.

Test-Parameters: testlist=sanity env=ONLY=56eaa,ONLY_REPEAT=100
Fixes: a00b941661 ("LU-17814 utils: Enable pfind by default")
Fixes: 08a3e19a04 ("LU-15837 utils: added lfs find --printf functions")
Signed-off-by: Oleg Drokin <green@whamcloud.com>
Assisted-by: ClaudeCode:Opus-4.8 llm_code_and_review_tools
Change-Id: If951fd6fff290e27ded94eca58b1a3b5a4af47d1
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67312
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>